compatible with java11+ (#1870)
* compatible with java11+

* fix